Fixing few things

--- a/BoomBikes - Demand Predictions-Subhabrata Ghosh.ipynb
+++ b/BoomBikes - Demand Predictions-Subhabrata Ghosh.ipynb
@@ -5977,8 +5977,16 @@
     "### Recommendations\n",
     " - Boombikes should focus on temperature\n",
     " - Boombike should consider light and snowy weather\n",
-    " - Boombike should focus on season spring"
+    " - Boombike should focus on season spring\n",
+    " "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
