--- a/BoomBikes - Demand Predictions-Subhabrata Ghosh.ipynb
+++ b/BoomBikes - Demand Predictions-Subhabrata Ghosh.ipynb
@@ -5284,6 +5284,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model - lm7"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 86,
    "metadata": {},
